adjusted media query from screen only to screen and 56.25em to 45em.. or try px size if this doesn't work

--- a/advanced-css-course-master/Natours/final-after-S06/sass/components/_card.scss
+++ b/advanced-css-course-master/Natours/final-after-S06/sass/components/_card.scss
@@ -165,8 +165,8 @@
 
 
     //@include respond(tab-port) {
-    @media only screen and (max-width: 56.25em),
-            only screen and (hover: none) {
+    @media screen and (max-width:45em),
+            screen and (hover: none) {
 
         height: auto;
         border-radius: 3px;
