--- a/advanced-css-course-master/Natours/final-after-S06/css/style.concat.css
+++ b/advanced-css-course-master/Natours/final-after-S06/css/style.concat.css
@@ -790,7 +790,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+  @media screen and (max-width: 1200px), only screen and (hover: none) {
     .card {
       height: auto;
       border-radius: 3px;
