--- a/advanced-css-course-master/Natours/final-after-S06/sass/components/_card.scss
+++ b/advanced-css-course-master/Natours/final-after-S06/sass/components/_card.scss
@@ -165,7 +165,7 @@
 
 
     //@include respond(tab-port) {
-    @media screen and (max-width:45em),
+    @media screen and (max-width:1200px),
             screen and (hover: none) {
 
         height: auto;
